Fix margin on mobile

--- a/src/components/SalePreview.scss
+++ b/src/components/SalePreview.scss
@@ -1,6 +1,6 @@
 .sale-preview {
-  @media (min-width: 60rem) {
-    width: 30rem;
+  @media (min-width: 62rem) {
+    width: 29rem;
     vertical-align: top;
   }
 }
